[package]
name = "iq"
version = "0.1.0"
edition = "2021"
authors = ["michaelgiba@gmail.com"]

[build-dependencies.lalrpop]
version = "0.19.8"
features = ["lexer"]

[dependencies]
structopt = "0.3.21"
anyhow = "1.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
image = "0.24.3"
clap =  { version = "3.2.20", features = ["cargo"] }
